fix(css): increase contrast of base color for WCAG compliance

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,6 +1,6 @@
 /* Define custom properties */
 :root {
-    --dse-base-color: #88DBDF;/* ACDH-AQUA in ACDH CD color scheme */
+    --dse-base-color: #017596;
 }
 
 /* Class for color styling */
